--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    
   },
   "keywords": [],
-  "author": "",
+  "author": "Abi A Sebastian",
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
